After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707291 - Warning when opening preferences dialog
Warning when opening preferences dialog
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Preferences
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-02 15:33 UTC by Guillaume Desmottes
Modified: 2013-09-02 15:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
theme-adium: deal with g_resources_lookup_data() failing (1.18 KB, patch)
2013-09-02 15:35 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2013-09-02 15:33:25 UTC
(lt-empathy:19124): GLib-CRITICAL **: g_bytes_get_data: assertion 'bytes != NULL' failed

0  0x00007ffff622bfcd in g_logv (log_domain=0x7ffff62abf7e "GLib", log_level=G_LOG_LEVEL_CRITICAL, 
    format=0x7ffff62b3e0c "%s: assertion '%s' failed", args=0x7fffffffc978) at gmessages.c:989
  • #1 g_log
    at gmessages.c line 1025
  • #2 g_return_if_fail_warning
    at gmessages.c line 1034
  • #3 g_bytes_get_data
    at gbytes.c line 233
  • #4 theme_adium_add_html
    at empathy-theme-adium.c line 735
  • #5 theme_adium_add_message
    at empathy-theme-adium.c line 1067
  • #6 empathy_theme_adium_append_message
    at empathy-theme-adium.c line 1102
  • #7 theme_adium_load_finished_cb
    at empathy-theme-adium.c line 1498
  • #8 g_cclosure_marshal_VOID__OBJECTv
    at gmarshal.c line 1312
  • #9 _g_closure_invoke_va
    at gclosure.c line 840
  • #10 g_signal_emit_valist
    at gsignal.c line 3234
  • #11 g_signal_emit_by_name
    at gsignal.c line 3422
  • #12 WebCore::ProgressTracker::finalProgressComplete()
    from /lib64/libwebkitgtk-3.0.so.0
  • #13 WebCore::ProgressTracker::progressCompleted(WebCore::Frame*)
    from /lib64/libwebkitgtk-3.0.so.0
  • #14 WebCore::FrameLoader::checkLoadCompleteForThisFrame()
    from /lib64/libwebkitgtk-3.0.so.0
  • #15 WebCore::FrameLoader::checkLoadComplete()
    from /lib64/libwebkitgtk-3.0.so.0
  • #16 WebCore::FrameLoader::checkCompleted()
    from /lib64/libwebkitgtk-3.0.so.0
  • #17 WebCore::CachedResourceLoader::loadDone(WebCore::CachedResource*)
    from /lib64/libwebkitgtk-3.0.so.0
  • #18 WebCore::SubresourceLoader::releaseResources()
    from /lib64/libwebkitgtk-3.0.so.0
  • #19 WebCore::SubresourceLoader::didFinishLoading(double)
    from /lib64/libwebkitgtk-3.0.so.0
  • #20 WebCore::readCallback(_GObject*, _GAsyncResult*, void*)
    from /lib64/libwebkitgtk-3.0.so.0
  • #21 async_ready_callback_wrapper
    at ginputstream.c line 519
  • #22 g_task_return_now
    at gtask.c line 1108
  • #23 complete_in_idle_cb
    at gtask.c line 1117
  • #24 g_idle_dispatch
    at gmain.c line 5250
  • #25 g_main_dispatch
    at gmain.c line 3065
  • #26 g_main_context_dispatch
    at gmain.c line 3641

Comment 1 Guillaume Desmottes 2013-09-02 15:35:24 UTC
Created attachment 253852 [details] [review]
theme-adium: deal with g_resources_lookup_data() failing

Only empathy-chat registers the gresources so when executing this code from
the empathy process (theme preview in the preferences dialog) we don't find
the resource. That's fine as this JS code is only used for the infinite
callback but best to not warning.
Comment 2 Guillaume Desmottes 2013-09-02 15:57:40 UTC
Attachment 253852 [details] pushed as 19e784a - theme-adium: deal with g_resources_lookup_data() failing