theme-adium: deal with g_resources_lookup_data() failing

Only empathy-chat registers the gresources so when executing this code from
the empathy process (theme preview in the preferences dialog) we don't find
the resource. That's fine as this JS code is only used for the infinite
callback but best to not warning.

https://bugzilla.gnome.org/show_bug.cgi?id=707291